crates/oxc_css_parser/tests/error/less/interpolation/declaration-value.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `(`, but found `{`
  ┌─ declaration-value.less:1:3
  │
1 │ a {
  │   ^


